{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 56,
  "lineage": "4c92d5aa-04de-4ef9-c6d5-964026a4a51d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c20b8b385217763f",
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:instance/i-0745587762587ee03",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0745587762587ee03",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a1d2c648f3603ad6",
            "private_dns": "ip-24-0-1-51.ap-southeast-1.compute.internal",
            "private_ip": "24.0.1.51",
            "public_dns": "ec2-13-250-5-236.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.5.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b91d0a603e03bbb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0442fb2198dd83ced",
            "tags": {
              "Name": "HelloTerraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e04f28e066b0dc7b",
              "sg-0f658245c082f465f"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraformkey",
            "aws_security_group.tf-alb-http",
            "aws_security_group.tf-allow-http",
            "aws_security_group.tf-allow-ssh",
            "aws_subnet.tv-public-1",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c20b8b385217763f",
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:instance/i-09277fa12df4e41ed",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09277fa12df4e41ed",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08afa6bb90d2b0a47",
            "private_dns": "ip-24-0-1-219.ap-southeast-1.compute.internal",
            "private_ip": "24.0.1.219",
            "public_dns": "ec2-13-212-21-98.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.21.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea2c56d27ba66f16",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0442fb2198dd83ced",
            "tags": {
              "Name": "HelloTerraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e04f28e066b0dc7b",
              "sg-0f658245c082f465f"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraformkey",
            "aws_security_group.tf-alb-http",
            "aws_security_group.tf-allow-http",
            "aws_security_group.tf-allow-ssh",
            "aws_subnet.tv-public-1",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c20b8b385217763f",
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:instance/i-0df9b167a8c6d7fbc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0df9b167a8c6d7fbc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0eb0240ef9205f93e",
            "private_dns": "ip-24-0-1-176.ap-southeast-1.compute.internal",
            "private_ip": "24.0.1.176",
            "public_dns": "ec2-13-212-252-6.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.252.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0afc8cee571ad64c0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0442fb2198dd83ced",
            "tags": {
              "Name": "HelloTerraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e04f28e066b0dc7b",
              "sg-0f658245c082f465f"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraformkey",
            "aws_security_group.tf-alb-http",
            "aws_security_group.tf-allow-http",
            "aws_security_group.tf-allow-ssh",
            "aws_subnet.tv-public-1",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tv-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:internet-gateway/igw-0c46ce6134998850a",
            "id": "igw-0c46ce6134998850a",
            "owner_id": "668579228208",
            "tags": {
              "Name": "tv-igw"
            },
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "dependencies": [
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:loadbalancer/app/exercise-alb/cd655d5c2d47d3a8",
            "arn_suffix": "app/exercise-alb/cd655d5c2d47d3a8",
            "dns_name": "exercise-alb-126549695.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:loadbalancer/app/exercise-alb/cd655d5c2d47d3a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "exercise-alb",
            "security_groups": [
              "sg-060dd6b8287653f92"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0442fb2198dd83ced"
              },
              {
                "subnet_id": "subnet-0537131091e77919f"
              },
              {
                "subnet_id": "subnet-07f3022f3fc12301d"
              }
            ],
            "subnets": [
              "subnet-0442fb2198dd83ced",
              "subnet-0537131091e77919f",
              "subnet-07f3022f3fc12301d"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0cf25757351fe958d",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.tf-alb-http",
            "aws_subnet.tv-public-1",
            "aws_subnet.tv-public-2",
            "aws_subnet.tv-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:listener/app/exercise-alb/cd655d5c2d47d3a8/4eb3dd9663d983b8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:listener/app/exercise-alb/cd655d5c2d47d3a8/4eb3dd9663d983b8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:loadbalancer/app/exercise-alb/cd655d5c2d47d3a8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.tg-terraform-alb",
            "aws_security_group.tf-alb-http",
            "aws_subnet.tv-public-1",
            "aws_subnet.tv-public-2",
            "aws_subnet.tv-public-3",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-terraform-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf",
            "arn_suffix": "targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-terraform-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "dependencies": [
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "vm-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf-20210204122139075400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf",
            "target_id": "i-0745587762587ee03"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.terraformkey",
            "aws_lb_target_group.tg-terraform-alb",
            "aws_security_group.tf-alb-http",
            "aws_security_group.tf-allow-http",
            "aws_security_group.tf-allow-ssh",
            "aws_subnet.tv-public-1",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "vm-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf-20210204122139200800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf",
            "target_id": "i-09277fa12df4e41ed"
          },
          "dependencies": [
            "aws_instance.web2",
            "aws_key_pair.terraformkey",
            "aws_lb_target_group.tg-terraform-alb",
            "aws_security_group.tf-alb-http",
            "aws_security_group.tf-allow-http",
            "aws_security_group.tf-allow-ssh",
            "aws_subnet.tv-public-1",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "vm-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf-20210204122139153600000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:668579228208:targetgroup/tf-terraform-tg/4aeb90ab84e1bfbf",
            "target_id": "i-0df9b167a8c6d7fbc"
          },
          "dependencies": [
            "aws_instance.web3",
            "aws_key_pair.terraformkey",
            "aws_lb_target_group.tg-terraform-alb",
            "aws_security_group.tf-alb-http",
            "aws_security_group.tf-allow-http",
            "aws_security_group.tf-allow-ssh",
            "aws_subnet.tv-public-1",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-tv-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d22e13f1b38b7928",
            "owner_id": "668579228208",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c46ce6134998850a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-tv-public"
            },
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tv-igw",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0badf862e2a6a4efb",
            "route_table_id": "rtb-0d22e13f1b38b7928",
            "subnet_id": "subnet-0442fb2198dd83ced"
          },
          "dependencies": [
            "aws_internet_gateway.tv-igw",
            "aws_route_table.route-tv-public",
            "aws_subnet.tv-public-1",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b35d2e045db10f2",
            "route_table_id": "rtb-0d22e13f1b38b7928",
            "subnet_id": "subnet-0537131091e77919f"
          },
          "dependencies": [
            "aws_internet_gateway.tv-igw",
            "aws_route_table.route-tv-public",
            "aws_subnet.tv-public-2",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066882243c4805fc5",
            "route_table_id": "rtb-0d22e13f1b38b7928",
            "subnet_id": "subnet-07f3022f3fc12301d"
          },
          "dependencies": [
            "aws_internet_gateway.tv-igw",
            "aws_route_table.route-tv-public",
            "aws_subnet.tv-public-3",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-alb-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:security-group/sg-060dd6b8287653f92",
            "description": "Allow http inbound traffic alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060dd6b8287653f92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-alb-http",
            "name_prefix": "",
            "owner_id": "668579228208",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-alb-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:security-group/sg-0e04f28e066b0dc7b",
            "description": "Allow http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e04f28e066b0dc7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-060dd6b8287653f92"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-allow-http",
            "name_prefix": "",
            "owner_id": "668579228208",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-allow-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tf-alb-http",
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:security-group/sg-0f658245c082f465f",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f658245c082f465f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-allow-ssh",
            "name_prefix": "",
            "owner_id": "668579228208",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tv-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:subnet/subnet-0442fb2198dd83ced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "24.0.1.0/24",
            "id": "subnet-0442fb2198dd83ced",
            "map_public_ip_on_launch": true,
            "owner_id": "668579228208",
            "tags": {
              "name": "tv-public-1"
            },
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "dependencies": [
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tv-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:subnet/subnet-0537131091e77919f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "24.0.2.0/24",
            "id": "subnet-0537131091e77919f",
            "map_public_ip_on_launch": true,
            "owner_id": "668579228208",
            "tags": {
              "name": "tv-public-2"
            },
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "dependencies": [
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tv-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:subnet/subnet-07f3022f3fc12301d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "24.0.3.0/24",
            "id": "subnet-07f3022f3fc12301d",
            "map_public_ip_on_launch": true,
            "owner_id": "668579228208",
            "tags": {
              "name": "tv-public-3"
            },
            "vpc_id": "vpc-0cf25757351fe958d"
          },
          "dependencies": [
            "aws_vpc.exercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "exercise-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:668579228208:vpc/vpc-0cf25757351fe958d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "24.0.0.0/16",
            "default_network_acl_id": "acl-0ae3e2d8bd5c52c39",
            "default_route_table_id": "rtb-0d40256891cd13945",
            "default_security_group_id": "sg-007b7256e60f14900",
            "dhcp_options_id": "dopt-0b90656d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cf25757351fe958d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d40256891cd13945",
            "owner_id": "668579228208",
            "tags": {
              "Name": "exercise-vpc"
            }
          }
        }
      ]
    }
  ]
}